<?xml version="1.0"?>
<package format="3">
  <name>loki_description</name>
  <version>2.0.0</version>
  <description>A package for generating loki II model descriptions</description>
  <license>Apache 2.0</license>
  <url type="website">https://www.example.com</url>
  <maintainer email="okb6@cornell.edu">TODO</maintainer>
  <author email="okb6@cornell.edu">TODO</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>xacro</depend>

  <export>
    <!-- export additional CMake packages if needed -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
