<?xml version="1.0"?>
<package format="3">
  <name>loki_nav</name>
  <version>2.0.0</version>
  <description>Metapackage for loki II simulation software</description>
  <license>Proprietary</license>
  <url type="website">http://www.example.com</url>

  <maintainer email="okb6@cornell.edu">TODO</maintainer>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>septentrio_gnss_driver</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <build_type>ament_python</build_type>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>