<?xml version="1.0"?>
<package format="3">
  <name>loki_teleop</name>
  <version>2.0.0</version>
  <description>This package converts joy messages into velocity commands for the Thorvald robotic platform</description>
  <maintainer email="okb6@cornell.edu">Owen Bates</maintainer>
  <license>Apache 2.0</license>
  <author email="okb6@cornell.edu">Owen Bates</author>
  

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>twist_mux</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
