<?xml version="1.0"?>
<package format="3"> 
  <name>loki_twist_mux</name>
  <version>2.0.0</version>
  <description>The loki_twist_mux package</description>
  <maintainer email="okb6@cornell.edu">TODO</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>twist_mux</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>

  </export>
</package>