<?xml version="1.0"?>
<package format="3">
  <name>loki_msgs</name>
  <version>2.0.0</version>
  <description>The loki_msgs package</description>
  <maintainer email="okb6@cornell.edu">TODO</maintainer>
  <license>Apache 2.0</license>
  <author email="okb6@cornell.edu">TODO</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>angles</depend>
  <depend>control_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>loki_description</depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>

  </export>
</package>
